[gd_scene load_steps=3 format=2]

[ext_resource path="res://SortMenu.gd" type="Script" id=1]
[ext_resource path="res://EncounterOverviewScreen.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.301961, 0.4, 1 )

[node name="VBC" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SearchBar" type="HBoxContainer" parent="ColorRect/VBC"]
margin_right = 1366.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="ColorRect/VBC/SearchBar"]
margin_top = 5.0
margin_right = 121.0
margin_bottom = 19.0
hint_tooltip = "Press enter after entering search term in order to filter events by search term."
mouse_filter = 1
text = "Search Encounters:"

[node name="LineEdit" type="LineEdit" parent="ColorRect/VBC/SearchBar"]
margin_left = 125.0
margin_right = 381.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 0 )
hint_tooltip = "Press enter after entering search term in order to filter encounters by search term."
placeholder_text = "Enter search term"

[node name="SortBar" type="HBoxContainer" parent="ColorRect/VBC"]
margin_top = 28.0
margin_right = 1366.0
margin_bottom = 48.0

[node name="Label" type="Label" parent="ColorRect/VBC/SortBar"]
margin_top = 3.0
margin_right = 48.0
margin_bottom = 17.0
text = "Sort by:"

[node name="SortMenu" type="OptionButton" parent="ColorRect/VBC/SortBar"]
margin_left = 52.0
margin_right = 81.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="EncounterList" type="Tree" parent="ColorRect/VBC"]
margin_top = 52.0
margin_right = 1366.0
margin_bottom = 736.0
size_flags_vertical = 3
columns = 6
column_titles_visible = true
hide_root = true

[connection signal="text_entered" from="ColorRect/VBC/SearchBar/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="item_selected" from="ColorRect/VBC/SortBar/SortMenu" to="." method="_on_SortMenu_item_selected"]
